# src/swagger/swagger.json
@@ -78,7 +78,7 @@
         }
       }
     },
-    "/events/insert": {
+    "/events/create": {
       "post": {
         "tags": [
           "Events"
@@ -146,6 +146,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
